added library cmake and test case

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,4 +6,12 @@ project(jb_deep)
 set(CMAKE_CXX_STANDARD 11)
 include_directories(${CMAKE_SOURCE_DIR})
 
-add_executable(mnist mnist.cc)
+
+# JB_DEEP LIBRARY
+
+add_library(jb_deep src/tensor.cc)
+
+# TESTS
+
+add_executable(test_tensor test/test_tensor.cc)
+target_link_libraries(test_tensor jb_deep)
